objects/Apttus_Config2__ProductHierarchyView__c.object
<CustomObject>
    <description>Represents a denormalized (materialized) view of product and classification hierarchies</description>
    <fields>
        <fullName>Apttus_Config2__CategoryHierarchy__c</fullName>
        <description>The category hierarchy associated with the child product</description>
        <inlineHelpText>The category hierarchy associated with the child product</inlineHelpText>
        <label>Category Hierarchy</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the child category</description>
        <label>Child Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy View (Child)</relationshipLabel>
        <relationshipName>HierarchyView2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildLabel__c</fullName>
        <description>The child category label</description>
        <formula>Apttus_Config2__ChildClassificationId__r.Apttus_Config2__Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildLeft__c</fullName>
        <description>The child left visitation sequence</description>
        <label>Child Left</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildLevel__c</fullName>
        <description>The child product or category level</description>
        <label>Child Level</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildName__c</fullName>
        <description>The child category name</description>
        <formula>Apttus_Config2__ChildClassificationId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the child product</description>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Hierarchy View</relationshipLabel>
        <relationshipName>ProductHierarchyView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildRight__c</fullName>
        <description>The child right visitation sequence</description>
        <label>Child Right</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HierarchyId__c</fullName>
        <description>ID of the category hierarchy</description>
        <label>Hierarchy</label>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipLabel>Product Hierarchy View</relationshipLabel>
        <relationshipName>ProductHierarchyView</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsDetail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the node in the hierarchy is a detail node.</description>
        <label>Is Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the view is inactive.</description>
        <inlineHelpText>Indicates whether the view is inactive.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent category</description>
        <label>Parent Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Hierarchy View (Parent)</relationshipLabel>
        <relationshipName>HierarchyView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentLabel__c</fullName>
        <description>The parent category label</description>
        <formula>Apttus_Config2__ParentClassificationId__r.Apttus_Config2__Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentLeft__c</fullName>
        <description>The parent left visitation sequence</description>
        <label>Parent Left</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentLevel__c</fullName>
        <description>The parent clategory level</description>
        <label>Parent Level</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentName__c</fullName>
        <description>The parent category name</description>
        <formula>Apttus_Config2__ParentClassificationId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentRight__c</fullName>
        <description>The parent right visitation sequence</description>
        <label>Parent Right</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <inlineHelpText>ID of the associated price list</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Product Hierarchy View</relationshipLabel>
        <relationshipName>ProductHierarchyView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductActive__c</fullName>
        <description>Indicates whether the child product is active</description>
        <formula>Apttus_Config2__ChildProductId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the child product is active</inlineHelpText>
        <label>Product Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated product classification ID.</description>
        <inlineHelpText>The associated product classification ID.</inlineHelpText>
        <label>Product Classification</label>
        <referenceTo>Apttus_Config2__ProductClassification__c</referenceTo>
        <relationshipLabel>Product Hierarchy View</relationshipLabel>
        <relationshipName>ProductHierarchyView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCode__c</fullName>
        <description>The product code</description>
        <formula>Apttus_Config2__ChildProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <formula>TEXT( Apttus_Config2__ChildProductId__r.Apttus_Config2__ConfigurationType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Configuration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductDescription__c</fullName>
        <description>The product description</description>
        <formula>Apttus_Config2__ChildProductId__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductEffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time</description>
        <formula>Apttus_Config2__ChildProductId__r.Apttus_Config2__EffectiveDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductExpirationDate__c</fullName>
        <description>The product effective date. The product is unavailable for selection after this date and time.</description>
        <formula>Apttus_Config2__ChildProductId__r.Apttus_Config2__ExpirationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family</description>
        <formula>TEXT(Apttus_Config2__ChildProductId__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductName__c</fullName>
        <description>The product name</description>
        <formula>Apttus_Config2__ChildProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationshipType__c</fullName>
        <description>The relationship type</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Root Node</fullName>
                </value>
                <value>
                    <fullName>Classification Node</fullName>
                </value>
                <value>
                    <fullName>Product Node</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <formula>Apttus_Config2__ProductClassificationId__r.Apttus_Config2__Sequence__c</formula>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Hierarchy View</label>
    <nameField>
        <displayFormat>PV-{0000000000}</displayFormat>
        <label>View Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchy Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>